styles.css
/* variable library */
:root {
    --ui-grey: rgba(100, 100, 100, 0.5);
    --ui-text: rgba(48, 119, 144, 1);
    --ui-switch: rgba(16, 54, 66, 1);
    --ui-shadow: rgba(8, 36, 48, 1);
    
    --score-text: rgba(64, 137, 152, 1);
    --score-text-add: rgba(98, 177, 2070, 1);
    --score-text-10:  rgba(212, 181, 117, 1);
    --score-text-shadow: rgba(74, 255, 232, 1);
    --score-text-shadow-10: rgba(152, 103, 83, 1);
    --score-gold: rgb(235, 77, 29);
    --target-color: rgb(150, 144, 125);
    --target-white: rgb(238, 236, 231);
    --target-blue: rgb(110, 127, 224);
    --target-cyan: rgb(102, 195, 223);
    --target-red: rgb(233, 92, 111);
    --target-yellow: rgb(247, 213, 129);

    --hand: rgba(48, 119, 144, 0.5);
    --arw-head: rgba(48, 96, 118, 1);
    --arw-shaft: rgba(54, 58, 62, 1);
    --arw-end: rgba(111, 62, 64, 1);

    --sky-height: 40vh;
    --sky-percentage: 40%;
    
    --target-size: ; /* Calculated in JS */
    /* --target-position-X: calc((100vw - (var(--target-size) + var(--target-border)*2))/2); 
    --target-position-Y: calc(var(--sky-height) - var(--target-size) * (2 / 3));  */
    --target-border: calc((var(--target-size))*0.01);
    --point-area-size: calc(var(--target-size)/20);

    --left-hand-size: 48px;
    --right-hand-size: 64px;    
}

html, body {
    margin: 0; 
    height: 100%; 
    overflow: hidden;
    image-rendering: pixelated;
}

body {
    margin: 0;
    font-family: 'Silkscreen', sans-serif;
    position: relative;
    user-select: none;
}

/* Debug Toggle */
.debug-switch {
    position: relative;
    display: inline-block;
    top: 1em;
    left: 1em;
    width: 30px;
    height: 17px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
  border-radius: 17px;
}

.slider:before {
    position: absolute;
    content: "";
    border-radius: 50%;
    height: 13px;
    width: 13px;
    left: 2px;
    bottom: 2px;
    background-color: var(--ui-text);
    -webkit-transition: .4s;
    transition: .4s;
}
  
input:checked + .slider {
    background-color: var(--ui-switch);
}
  
input:focus + .slider {
    box-shadow: 0 0 1px var(--ui-text);
}
  
  input:checked + .slider:before {
    -webkit-transform: translateX(13px);
    -ms-transform: translateX(13px);
    transform: translateX(13px);
}  

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--ui-switch);
    box-shadow: 1px 1px var(--ui-shadow);
    border: 1px black;
    transition: .4s;
}

#debug-toggle {
    display: none;
}

#debug-state-label {
    position: absolute;
    width: max-content;
    left: 2em;
}

.ui {
    color: var(--ui-text);
    text-shadow: 1px 1px var(--ui-shadow);
}

#score {
    position: absolute;
    display: block;
    top: 1em;
    right: 1em;
    /* animation: scoreAdd 1.9s normal forwards; */
    animation-iteration-count: infinite;
    animation-timing-function: ease-out;
}

@keyframes scoreAdd {
    0% {
        color: var(--score-text);
    }
    5% {
        color: var(--score-text-add);
    }
    70% {
        color: var(--score-text-add);
    }    
    100% {
        color: var(--score-text);
    }
}

.hit-score {
    position: absolute;
    font-size: 2em;
    font-weight: 800;
    color: var(--score-text);
    text-shadow: 0px 1px var(--score-text-shadow);
    opacity: 0;
    animation: opacityOn 2.5s normal forwards;
    animation-timing-function: ease-out;
    z-index: 11;
}

@keyframes opacityOn {
    0% {
        opacity: 1;
        transform: translateY(0px);
    }
    5% {
        opacity: 1;
        transform: translateY(0px);
    }
    70% {
        opacity: 1;
    }    
    100% {
        opacity: 0;
        transform: translateY(-60px);
    }
}

/* .hit-animation {
    opacity: 100%;
    transform: translateY(-2em);
    animation: wipe-enter 1s 1;    
} */

.debug-text {
    font-size: 0.75em;
    margin-left: 60px;
    margin-bottom: 10px;
}

.test-point {
    position: absolute;
    width: 2px;
    height: 2px;
    background-color: black;
    transform: translate(-1px, -1px);
    z-index: 20;
}

.trajectory {
    position: absolute;
    width: 2px;
    height: 2px;
    /* border-radius: 50%; */
    background-color: white;
    opacity: 100%;
    transform: translate(-1px, -1px);
    z-index: 30;
}

.arrow-head {
    position: absolute;
    background-color: var(--arw-head);
    z-index: 20;
}

.arrow-shaft {
    background-color: var(--arw-shaft);
    z-index: 21;
}

.arrow-end {
    position: absolute;
    width: 16px;
    height: 16px;
    background-color: var(--arw-end);
    transform: translate(-8px, -8px);
    /* transform: scaleX(75%) rotate(45deg); */
    z-index: 22;
}

#game-area {
    height: 100vh;
    width: 100vw;
    top: 0;
    left: 0;
    z-index: -10;
}

#sky {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: var(--sky-height);
    background: rgb(25,180,255);
    background: linear-gradient(180deg, rgba(25,180,255,1) 0%, rgba(156,221,255,1) 60%, rgba(234,248,255,1) 100%);
    z-index: -2;
}

#ground {
    position: absolute;
    top: var(--sky-height);
    width: 100vw;
    height: calc(100vh - var(--sky-height));
    background: rgb(104,150,37);
    background: linear-gradient(0deg, rgba(104,150,37,1) 0%, rgba(165,205,116,1) 75%, rgba(208,232,173,1) 100%);
    z-index: -2;
}

#background {
    /* display: none; */
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-image: url('images/background.png');
    background-position: 50% var(--sky-percentage);
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 100%;
    z-index: -1;
}

#explosion-10 {
    /* display: none; */
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-image: url('images/10FX.png');
    background-position: 50% var(--sky-percentage);
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0%;
    z-index: 1;
}

#target, #target-fallback {
    /* display: none; */
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-position: 50% var(--sky-percentage);
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 100%;
    z-index: 0;
}

#target{
    background-image: url('images/target.gif');
}

#target-fallback{
    background-image: url('images/target-fallback.png');
    z-index: -1;
}

#point-area-1 {
    display: none;
    /* display: flex; */
    position: absolute;
    top: var(--target-position-Y);
    left: var(--target-position-X);
    width: var(--target-size);
    height: var(--target-size);
    background-color: var(--target-white);
    border-radius: 50%;
    border: var(--target-border) solid black;
    margin: 0;
    z-index: 10;
}

.point-area {
    display: none;
    /* display: flex; */
    margin: var(--point-area-size) var(--point-area-size);
    align-items: center;
    border-radius: 50%;  
}

#point-area-3, #point-area-4 {
    background-color: var(--target-blue);
}

#point-area-5, #point-area-6 {
    background-color: var(--target-cyan);
}

#point-area-7, #point-area-8 {
    background-color: var(--target-red);
}

#point-area-9, #point-area-10 {
    background-color: var(--target-yellow);
}

#left-hand {
    display: none;
    flex-direction: column;
    width: var(--left-hand-size);
    height: var(--left-hand-size);
    background-color: none;
    border: 4px solid var(--hand);
    border-radius: 50%;
    position: absolute;       
    z-index: 30;
    left: calc((100vw - (var(--target-size) * -2 + var(--target-border)*2))/2); 
    top: calc(var(--sky-height) - var(--target-size) * -2); 

}

#right-hand {
    display: none;
    width: 4em;
    height: 4em;
    background-color: none;
    border: 6px solid var(--hand);
    border-radius: 50%;
    position: absolute;
    top: 50px;
    left: 50px;
    z-index: 30;
    /* --target-position-X: calc((100vw - (var(--target-size) + var(--target-border)*2))/2); 
    --target-position-Y: calc(var(--sky-height) - var(--target-size) * (2 / 3));  */
}

